--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
 @keyframes color-change {
   0% {
     fill: rgb(0, 183, 255);
